--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,10 @@
 version: 0.0
 os: linux
+
+files:
+  - source: /
+    destination: /home/ec2-user
+    
 hooks:
 BeforeInstall:
 - location: scripts/beforecicd.sh
